# AgentHub

./: .claudeignore  .coveragerc  .env.example  .gitattributes  .gitignore  .gitmessage  CLAUDE.md  README.md  coverage.json  hexagonal-patterns.skill  mcp-adk-standards.skill  notepad.txt  phase6-partA-completion-notes.md  playground_test_output.txt  pyproject.toml
.claude/: disabled-hooks.md  settings.json  settings.json.bak  settings.local.json  settings_minimal.json  settings_optimized.json  settings_smart.json
.claude/agent-memory/doc-audit-planner/: MEMORY.md
.claude/agent-memory/e2e-test-engineer/: MEMORY.md
.claude/agents/: adr-specialist.md  code-reviewer.md  doc-audit-planner.md  e2e-test-engineer.md  hexagonal-architect.md  phase-orchestrator.md  plan-phase-validator.md  plan-validator.md  security-reviewer.md  tdd-agent.md
.claude/skills/agenthub-extension/: SKILL.md
.claude/skills/claudemd-optimization/: SKILL.md
.claude/skills/code-explainer/: SKILL.md
.claude/skills/decision-helper/: SKILL.md
.claude/skills/hexagonal-patterns/: SKILL.md
.claude/skills/mcp-adk-standards/: SKILL.md
.claude/skills/security-checklist/: SKILL.md  security-report-2026-01-29.md
.claude/skills/skill-creator/: agenthub-extension.skill
.claude/skills/tdd/: SKILL.md
.github/workflows/: ci.yml
_archive/docs/: architecture-research.md  architecture-scenarios.md  archived-ideas.md  project-analysis.md  roadmap.md
_archive/docs/old/: README.md  agents-guide.md  architecture-agents.md  skills-guide.md
configs/: default.yaml
docs/: CONTRIBUTING.md  MAP.md  README.md  STATUS.md  architecture-proposal.md  architecture.md  extension-guide.md  implementation-guide.md  llms.txt  pre-implementation-review.md  roadmap.md  skill-agent-guide.md  standards-verification.md
docs/archive/: .cleanup-tasks.md  HOOK_OPTIMIZATION_SUMMARY.md  Melon MCP Server Integration Guide.md  README.md  feasibility-analysis-2026-01.md  phase4.0(초안).md  pure-wondering-lynx.md  risk-assessment.md
docs/archive/reports/: AgentHub 품질 평가 보고서.md  AgentHub 프로젝트 문서 종합 평가 보고서.md  AgentHub 프로젝트 종합 평가.md  claude-code-optimization.md  comprehensive-evaluation-2026-01-29.md
docs/decisions/: 0001-adopt-adr-pattern.md  0009-langgraph-a2a-not-plugin.md  0010-adk-workflow-agents.md  2026-01-28-claude-md-automation-workflow.md  ADR-011-workflow-agents-spike-results.md  README.md  TEMPLATE.md
docs/developers/: README.md
docs/developers/architecture/: README.md
docs/developers/guides/: README.md
docs/developers/testing/: README.md
docs/developers/workflows/: README.md
docs/guides/: README.md  architecture.md  extension-guide.md  hook-optimization.md  phase2.5-manual-verification.md  standards-verification.md
docs/operators/: README.md
docs/operators/deployment/: README.md
docs/operators/observability/: README.md
docs/operators/security/: README.md
docs/plans/: README.md  phase-template.md  phase1.5.md  phase2.0.md  phase2.0_LLM TestFailuresFixPlan.md  phase2.5.md  phase3.0.md  phase3.0_E2E_Playwright_Test.md  phase4.0-partA.md  phase4.0-partB.md  phase4.0-partC.md  phase4.0-partD.md  phase4.0-partE.md  phase4.0.md  phase5.0-partA.md  phase5.0-partB.md  phase5.0-partC.md  phase5.0-partD.md  phase5.0.md  phase6.0-partA.md  phase6.0-partB.md  phase6.0-partC.md  phase6.0.md  phase7.0-partD.md  phase7.0.md
docs/plans/phase4/: partA.md  phase4.0.md
docs/plans/phase5/: partB.md  partC.md  partD.md  partE.md  phase5.0.md
docs/plans/phase6/: partA.md  partB.md  partC.md  partD.md  phase6.0.md
docs/plans/phase7/: partA.md  partB.md  partC.md  partD.md  phase7.0.md
docs/plans/phase8/: phase8.0.md
docs/project/: README.md
docs/project/archive/: README.md
docs/project/decisions/: README.md
docs/project/planning/: README.md  TEMPLATE.md
docs/reports/: verification-phase6-partA-2026-02-02.md
docs/validations/: phase6-partA-validation-20260202.md  phase6-partB-validation-20260202.md
extension/: README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wxt.config.ts
extension/.wxt/types/: imports-module.d.ts  imports.d.ts  paths.d.ts
extension/components/: A2aAgentManager.tsx  ChatInput.tsx  ChatInterface.tsx  CodeBlock.tsx  McpServerManager.tsx  MessageBubble.tsx  ServerStatus.tsx  ToolCallIndicator.tsx  WorkflowManager.tsx
extension/components/__tests__/: WorkflowManager.test.tsx
extension/entrypoints/: background.ts  content.test.ts  content.ts
extension/entrypoints/offscreen/: index.html  main.ts
extension/entrypoints/sidepanel/: App.css  App.tsx  index.html  main.tsx
extension/hooks/: useA2aAgents.ts  useChat.ts  useMcpServers.ts  useServerHealth.ts
extension/lib/: api.ts  background-handlers-content.test.ts  background-handlers.ts  constants.ts  content-extract.test.ts  content-extract.ts  content-messaging.test.ts  content-messaging.ts  markdown.ts  messaging.ts  offscreen-handlers.ts  sse.ts  types.ts
scripts/: smart_test.sh  validate_doc_references.py  validate_docs.py
src/: README.md  __init__.py  main.py
src/adapters/: README.md  __init__.py
src/config/: README.md  __init__.py  container.py  logging_config.py  settings.py
src/domain/: README.md  __init__.py  constants.py  exceptions.py
tests/: README.md  __init__.py  conftest.py
tests/chaos/: conftest.py  test_concurrent_tools.py  test_llm_rate_limit.py  test_mcp_failure.py
tests/docs/: Configuration.md  Execution.md  Resources.md  Strategy.md  Structure.md  Troubleshooting.md  WritingGuide.md
tests/e2e/: README.md  __init__.py  conftest.py  test_extension_server.py  test_playground.py  test_playground_hitl_sse.py  test_playwright_extension.py
tests/fixtures/: __init__.py  test_a2a_echo_agent.py
tests/integration/: __init__.py  conftest.py  test_app_startup.py  test_dual_track.py  test_dynamic_ports.py  test_elicitation_routes.py  test_hitl_events_routes.py  test_hitl_notification_adapter.py  test_mcp_client_adapter.py  test_orchestrator_generate.py  test_sampling_routes.py  test_sse_broker.py
tests/logs/: .gitkeep
tests/unit/: conftest.py
(+375 files in other folders)
