[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenthub"
version = "0.1.0"
description = "Google ADK 기반 MCP + A2A 통합 Agent System"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "AgentHub Team" }
]
keywords = ["agent", "mcp", "a2a", "adk", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Agent Framework
    "google-adk>=1.23.0",
    "a2a-sdk>=0.3.0",  # Required by google-adk RemoteA2aAgent
    "litellm>=1.0.0",

    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",

    # Database
    "aiosqlite>=0.19.0",

    # Configuration & DI
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "dependency-injector>=4.41.0",

    # HTTP Client
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.2.0",
    "playwright>=1.40.0",

    # Linting & Formatting
    "ruff>=0.2.0",

    # Type Checking
    "mypy>=1.8.0",

    # Development Tools
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/circling-booster/AgentHub"
Repository = "https://github.com/circling-booster/AgentHub"
Documentation = "https://github.com/circling-booster/AgentHub/tree/main/docs"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short -m 'not llm and not e2e_playwright and not local_mcp and not local_a2a and not chaos'"
timeout = 120
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::RuntimeWarning:litellm",
    "ignore:.*EXPERIMENTAL.*:UserWarning",
]
markers = [
    "llm: tests requiring LLM API key (excluded by default)",
    "local_mcp: tests requiring local MCP server (127.0.0.1:9000)",
    "mcp: tests requiring running MCP server (--run-mcp option)",
    "e2e_playwright: full browser E2E tests with Playwright (excluded by default)",
    "local_a2a: tests requiring local A2A agent server (127.0.0.1:9001)",
    "integration: integration tests (adapter + external systems)",
    "chaos: chaos engineering tests (MCP failure, rate limits, concurrency - excluded by default)",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise without from (too noisy)
]

[tool.ruff.lint.isort]
known-first-party = ["src", "domain", "adapters", "config"]

[tool.ruff.lint.per-file-ignores]
# tests/: Fake adapter의 인터페이스 준수를 위한 미사용 인자 허용
"tests/**/*.py" = ["ARG"]
# src/adapters/inbound/http/app.py: FastAPI lifespan 패턴 시그니처 준수
"src/adapters/inbound/http/app.py" = ["ARG001"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    ".venv/",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
